------------------------------------------------------------------------------
  qPython 1.3.0 [2017.03.xx]
------------------------------------------------------------------------------

  - Add support for Python 3.5 and 3.6. Drop support for Python 3.3
  - Fix: serialization of 0n in generic lists

------------------------------------------------------------------------------
  qPython 1.2.2 [2016.09.21]
------------------------------------------------------------------------------

  - Fix: Pandas deserialization of single row tables with string nulls

------------------------------------------------------------------------------
  qPython 1.2.1 [2016.03.29]
------------------------------------------------------------------------------

  - Fix: QConnection.close() frees linked file object

------------------------------------------------------------------------------
  qPython 1.2.0 [2016.01.22]
------------------------------------------------------------------------------

  - API redesign: enable custom serializers & deserializers

------------------------------------------------------------------------------
  qPython 1.1.0 [2015.11.25]
------------------------------------------------------------------------------

  - Compatibility with Python 2.7, 3.3, and 3.4

------------------------------------------------------------------------------
  qPython 1.0.2 [2015.09.03]
------------------------------------------------------------------------------

  - Enhancement: configuration of serialization for single element strings

------------------------------------------------------------------------------
  qPython 1.0.1 [2015.08.11]
------------------------------------------------------------------------------

  - Fix: serialization of indexed Pandas.DataFrames

------------------------------------------------------------------------------
  qPython 1.0.0 [2015.04.10]
------------------------------------------------------------------------------
