@@ -65,7 +65,7 @@ if __name__ == '__main__':
         print('Press <ENTER> to close application')
 
         # subscribe to tick
-        response = q.sync('.u.sub', numpy.string_('trade'), numpy.string_(''))
+        response = q.sendSync('.u.sub', numpy.string_('trade'), numpy.string_(''))
         # get table model 
         if isinstance(response[1], QTable):
             print('%s table data model: %s' % (response[0], response[1].dtype))
