@@ -77,6 +77,7 @@ setup(name = 'qPython',
           'Programming Language :: Python :: 3.4',
           'Programming Language :: Python :: 3.5',
           'Programming Language :: Python :: 3.6',
+          'Programming Language :: Python :: 3.7',
           'Topic :: Database :: Front-Ends',
           'Topic :: Scientific/Engineering',
           'Topic :: Software Development',
