@@ -1,4 +1,12 @@
 ------------------------------------------------------------------------------
+  qPython 2.0.0 [2019.01.01]
+------------------------------------------------------------------------------
+
+  - INCOMPATIBILITY Renamed QConnection.sync and QConnection.async to 
+    QConnection.sendSync and QConnection.sendAsync resp.,
+    because of 'async' becoming a keyword in Python 3.7
+
+------------------------------------------------------------------------------
   qPython 1.3.0 [2017.03.xx]
 ------------------------------------------------------------------------------
 
